--- a/index.html
+++ b/index.html
@@ -2,35 +2,59 @@
 <html lang="no">
 <head>
   <meta charset="UTF-8" />
-  <title>Min Pris</title>
+  <title>MinPris</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #f5f5f5;
-      padding: 40px;
+      background: #f4f4f4;
+      display: flex;
+      justify-content: center;
+      padding: 30px;
     }
+
     .box {
       background: white;
-      max-width: 500px;
-      margin: auto;
       padding: 25px;
-      border-radius: 8px;
+      border-radius: 10px;
+      max-width: 500px;
+      width: 100%;
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
-    h1 { text-align: center; }
+
+    h1 {
+      text-align: center;
+    }
+
     input, textarea, button {
       width: 100%;
-      padding: 10px;
+      padding: 12px;
       margin-top: 10px;
+      font-size: 16px;
+      border-radius: 6px;
+      border: 1px solid #ccc;
     }
+
+    textarea {
+      resize: vertical;
+      min-height: 120px;
+    }
+
     button {
       background: black;
       color: white;
-      border: none;
       cursor: pointer;
     }
-    button:hover { opacity: 0.8; }
-    small { color: #555; }
+
+    .link {
+      font-size: 14px;
+      margin-top: 5px;
+    }
+
+    .link a {
+      color: blue;
+      text-decoration: underline;
+    }
   </style>
 </head>
 <body>
@@ -40,54 +64,40 @@
 
   <textarea id="tekst" placeholder="Beskriv jobben..."></textarea>
 
-  <input id="timepris" placeholder="Timepris (kr)" type="number">
-  <input id="km" placeholder="Km per dag" type="number">
-  <input id="avfall" placeholder="Avfall (kr)" type="number">
-  <input id="forbruk" placeholder="Forbruk (kr)" type="number">
+  <input id="timepris" type="number" placeholder="Timepris (kr)" />
+  <input id="km" type="number" placeholder="Km per dag" />
 
-  <small>Usikker? <a href="https://maps.google.com" target="_blank">Sjekk Google Maps</a></small>
+  <div class="link">
+    Usikker? <a href="https://www.google.com/maps" target="_blank">Sjekk Google Maps</a>
+  </div>
+
+  <input id="avfall" type="number" placeholder="Avfall (kr)" />
+  <input id="forbruk" type="number" placeholder="Forbruk (kr)" />
 
   <button onclick="beregn()">Beregn</button>
-  <button onclick="lagPDF()">Last ned tilbud (PDF)</button>
+  <button onclick="lastNedPDF()">Last ned tilbud (PDF)</button>
 </div>
 
 <script>
 async function beregn() {
   const res = await fetch("/api/ai", {
     method: "POST",
-    headers: {"Content-Type": "application/json"},
+    headers: { "Content-Type": "application/json" },
     body: JSON.stringify({
-      tekst: tekst.value,
-      timepris: timepris.value,
-      km: km.value,
-      avfall: avfall.value,
-      forbruk: forbruk.value
+      tekst: document.getElementById("tekst").value,
+      timepris: Number(document.getElementById("timepris").value),
+      km: Number(document.getElementById("km").value),
+      avfall: Number(document.getElementById("avfall").value),
+      forbruk: Number(document.getElementById("forbruk").value)
     })
   });
 
   const data = await res.json();
-  alert("Estimert pris: " + data.total + " kr");
+  alert("Totalpris: " + data.total + " kr");
 }
 
-async function lagPDF() {
-  const res = await fetch("/api/pdf", {
-    method: "POST",
-    headers: {"Content-Type": "application/json"},
-    body: JSON.stringify({
-      tekst: tekst.value,
-      timepris: timepris.value,
-      km: km.value,
-      avfall: avfall.value,
-      forbruk: forbruk.value
-    })
-  });
-
-  const blob = await res.blob();
-  const url = window.URL.createObjectURL(blob);
-  const a = document.createElement("a");
-  a.href = url;
-  a.download = "tilbud.pdf";
-  a.click();
+function lastNedPDF() {
+  window.open("/api/pdf", "_blank");
 }
 </script>
 
